--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
-version: '3.0'
+version: '3.0' # specifying the version of docker-compose
 services:
     webserver:
-      build: .
+      build:  # building the docker-image using docker file
+       context: .
+       dockerfile: Dockerfile
+      environment:
+          NODE_ENV: production # specifying the enviornment
       networks:
          - frontend
-    mysql:
-       image: mysql
+      ports:
+         - "8086:8080"  # port-mapping
+    mysql:  # database service
+       image: mysql:latest
+       volumes:
+          - db_data:/var/lib/mysql # volume path
+       restart: always
        environment:
          MYSQL_ROOTPASSWORD: admin
          MYSQL_DATABASE: admin12
@@ -18,3 +27,6 @@ networks:
        driver: bridge
     backend:
       driver: bridge
+volumes:   # declaring the volumes
+   db_data:
+     driver: local
